# Mtm_Ex1

./: CMakeLists.txt
part 1/: main.c
part 2/: list.c
part_1/: CMakeLists.txt  main.c
part_2/: CMakeLists.txt  Node.c  list.c
part_3/: CMakeLists.txt  main.c  map.c  map_example_test.c  node.c  node.h
part_4/: CMakeLists.txt  eurovision.c  eurovision.h  friendlyStates.c  friendlyStates.h  judge.c  judge.h  makefile  state.c  state.h  stateScore.c  stateScore.h  stateVotes.c  stateVotes.h
part_4/tests/: eurovisionFunctionalityTests.c  eurovisionTests.c  eurovisionTestsMain.c  test2018.c
